# devops-engineer-from-scratch-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: brain_games.py  cli.py  engine.py
brain_games/games/: calc_game.py  gcd_game.py  is_even_game.py  prime_game.py  progression_game.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
