[project]
name = "hexlet-code"
version = "0.1.0"
description = "There are Brain games"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games", "brain_even"]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
